wandb/run-20260217_211636-g1vb3it5/files/output.log
[34m[1mwandb[0m: Detected [huggingface_hub.inference] in use.
[34m[1mwandb[0m: Use W&B Weave for improved LLM call tracing. Install Weave with `pip install weave` then add `import weave` to the top of your script.
[34m[1mwandb[0m: For more information, check out the docs at: https://weave-docs.wandb.ai/
Traceback (most recent call last):
  File "C:\Online Courses\NYP\GenAIandDeepL\genAI-deepL-project\main.py", line 113, in <module>
    main()
  File "C:\Online Courses\NYP\GenAIandDeepL\genAI-deepL-project\main.py", line 106, in main
    launch_baseline("cnn", "cnn_baseline.yaml", run_baseline_cnn, project=args.project)
  File "C:\Online Courses\NYP\GenAIandDeepL\genAI-deepL-project\main.py", line 15, in launch_baseline
    run_function(project=project, config_file=config_file)
  File "C:\Online Courses\NYP\GenAIandDeepL\genAI-deepL-project\src\cnn.py", line 211, in run_baseline
    _run(config)
  File "C:\Online Courses\NYP\GenAIandDeepL\genAI-deepL-project\src\cnn.py", line 58, in _run
    train_df["image_path"] = train_df["image_path"].apply(
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\sugar\.conda\envs\genaideepl\Lib\site-packages\pandas\core\series.py", line 4943, in apply
    ).apply()
      ^^^^^^^
  File "C:\Users\sugar\.conda\envs\genaideepl\Lib\site-packages\pandas\core\apply.py", line 1422, in apply
    return self.apply_standard()
           ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\sugar\.conda\envs\genaideepl\Lib\site-packages\pandas\core\apply.py", line 1502, in apply_standard
    mapped = obj._map_values(
             ^^^^^^^^^^^^^^^^
  File "C:\Users\sugar\.conda\envs\genaideepl\Lib\site-packages\pandas\core\base.py", line 925, in _map_values
    return algorithms.map_array(arr, mapper, na_action=na_action, convert=convert)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\sugar\.conda\envs\genaideepl\Lib\site-packages\pandas\core\algorithms.py", line 1743, in map_array
    return lib.map_infer(values, mapper, convert=convert)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "pandas/_libs/lib.pyx", line 2999, in pandas._libs.lib.map_infer
  File "C:\Online Courses\NYP\GenAIandDeepL\genAI-deepL-project\src\cnn.py", line 59, in <lambda>
    lambda x: ast.literal_eval(x) if isinstance(x, str) else x
              ^^^^^^^^^^^^^^^^^^^
  File "C:\Users\sugar\.conda\envs\genaideepl\Lib\ast.py", line 66, in literal_eval
    node_or_string = parse(node_or_string.lstrip(" \t"), mode='eval')
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\sugar\.conda\envs\genaideepl\Lib\ast.py", line 52, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<unknown>", line 1
    .\datasets\Data\hardikpandya93_25298326_3015497697586924812_1434924_4335\2023-01-14_11-22-39_UTC.jpg
    ^
SyntaxError: invalid syntax
